--- a/template.html.jinja2
+++ b/template.html.jinja2
@@ -154,7 +154,7 @@
     {%- for datarow in rows -%} {%- if datarow.type == 'calc' %}
 
       <!-- Print calc: {{datarow.comment}} -->
-      document.getElementById("{{datarow.id}}").value = roundnum({{datarow.id}}
+      document.getElementById("{{datarow.id}}").value = num_fix({{datarow.id}}
         {%- if datarow.prefix != 1 %} * {{ to_numexp_1(1.0/datarow.prefix|float) }}{% endif %}, {{data.resolution}});
     {%- endif %} {%- endfor %}
     }
@@ -206,16 +206,17 @@
       return val * 1.0; <!-- return number -->
     }
 
-    <!-- Round number to digits -->
-    function roundnum(number, digits) {
-      if (isNaN(number) || !isFinite(number)) return '';
+    <!-- Format number with fix digits -->
+    function num_fix(number, digits) {
+      if (!isFinite(number)) return '';
       if (number == 0) return '0';
       if (Math.sign(number) < 0)
-        sign = '-';
+        var sign = '-';
       else
-        sign = '';
-      exp = Math.ceil(Math.log(number)/Math.log(10) + 0.000001);
-      number = Math.round(Math.abs(number) * Math.pow(10, digits - exp)) + '';
+        var sign = '';
+     number = Math.abs(number)
+      exp = Math.ceil(Math.log10(number) + 0.000001);
+      number = Math.round(number * Math.pow(10, digits - exp)) + '';
       if (digits > exp) { <!-- decimals -->
         if (exp <= 0) { <!-- all decimals -->
           return sign + '0.0000000'.substr(0, 2 - exp) + number;
@@ -298,9 +299,9 @@
   <!-- License -->
   <div class="license">
     This work by <a href="https://github.com/Picuino/Picalc">Picuino</a>
-    is licensed under a 
-	<a rel="MIT License" href="http://www.gnu.org/licenses/gpl-3.0.txt">
-	   GPL version 3 license</a>.
+    is licensed under a
+   <a rel="MIT License" href="http://www.gnu.org/licenses/gpl-3.0.txt">
+      GPL version 3 license</a>.
   </div>
 
 </body>
