Load saved values at init.

--- a/template.html.jinja2
+++ b/template.html.jinja2
@@ -119,7 +119,10 @@
 
     <!-- Init calculations -->
     function init() {
-       reset_var();
+       if  (getCookie("saved") == 'true')
+          load_var();
+       else
+          reset_var();
        calc();
     }
 
@@ -178,10 +181,12 @@
     <!-- Save variables -->
     function save_var() {
       var expiresdate = new Date(2068, 1, 02, 11, 20);
+      expiresdate = "expires=" + expiresdate.toUTCString();
       var names = [{%- for datarow in rows %} {%- if datarow.type == 'var' %}"{{datarow.id}}", {% endif %} {%- endfor %} ];
       for(var i=0; i<names.length; i++) {
-        document.cookie = names[i] + " = " + encodeURIComponent(tonum(names[i])) + "; expires=" + expiresdate.toUTCString();
+        document.cookie = names[i] + " = " + encodeURIComponent(tonum(names[i])) + "; " + expiresdate;
       }
+      document.cookie = "saved = true; " + expiresdate
     }
 
     <!-- Load variables -->
