Disabled: edit input form with constants and calcs

--- a/template.html.jinja2
+++ b/template.html.jinja2
@@ -86,6 +86,8 @@
       border: 1px solid #888;
       border-radius: 4px;
     }
+    input[type=text]:disabled { color: black; }
+    
     .sval {
       display: inline-block;
       width: {{data.width.value}};
@@ -296,14 +298,14 @@
     <!--  Image: {{datarow.name}} -->
     <img alt="{{datarow.name}}" {% if 'width' in datarow %}width="{{datarow.width}}" {% endif %}src="{{binobjects[datarow.src]}}">
 
-    {%- else %}
+    {%- elif datarow.type in ['var', 'const', 'calc'] %}
 
     <!--  Row  -->
     <div class="row">
       <div class="sname">{{datarow.name}}</div>
 
     {%- if datarow.type == 'const' %}
-      <div class="sconst"> <form> <input type="text" id="{{datarow.id}}"> </form> </div>
+      <div class="sconst"> <form> <input disabled="disabled" type="text" id="{{datarow.id}}"> </form> </div>
     {%- endif %}
 
     {%- if datarow.type == 'var' %}
@@ -311,7 +313,7 @@
     {%- endif %}
 
     {%- if datarow.type == 'calc' %}
-      <div class="scalc"> <form> <input type="text" id="{{datarow.id}}"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="{{datarow.id}}"> </form> </div>
     {%- endif %}
       <div class="sunit">{% if datarow.unit %}{{datarow.unit}}{% else %}&nbsp;{% endif %}</div>
       <div class="scoment">{{datarow.comment}}</div>
