--- a/templates/script.html
+++ b/templates/script.html
@@ -3,11 +3,11 @@
 
     {% for include in data.include %} {% if include.type == 'script' %}
 
-    <!-- Include script ({{include.code.count('\n')+1}} lines ): {{include.name}} -->
-    {{include.code|string}}
+    <!-- Include script: {{include.name}} -->
+    {% include 'include/{{include.name}}' %}
 
     <!-- End {{include.name}} -->
-    {%- endif %} {%- endfor %} 
+    {%- endif %}{%- endfor %} 
     
     <!-- Init calculations -->
     function init() {
