--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,10 @@
 <head>
 
   <!-- Head -->
-  <title>{{data.title}}</title>
+  <title>{{config.title}}</title>
   <meta charset="UTF-8">
-  <meta name="Keywords" content="{{data.keywords}}">
-  <meta name="Description" content="{{data.description}}">
+  <meta name="Keywords" content="{{config.keywords}}">
+  <meta name="Description" content="{{config.description}}">
   <meta name="Version" content="{{version}}">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 
