--- a/templates/content.html
+++ b/templates/content.html
@@ -1,6 +1,6 @@
 ﻿<div class="content">
 
-  <h1>{{data.title}}</h1>
+  <h1>{{config.title}}</h1>
 
   {%- for datarow in rows %}
 
@@ -14,10 +14,10 @@
     <!--  Section: {{datarow.name}} -->
     {{datarow.code}}
 
-    {%- elif datarow.type == 'img' %}
+    {%- elif datarow.type == 'image' %}
 
     <!--  Image: {{datarow.name}} -->
-    <img alt="{{datarow.name}}" {% if 'width' in datarow %}width="{{datarow.width}}" {% endif %}src="{{binobjects[datarow.src]}}">
+    <img alt="{{datarow.comment}}" {% if 'width' in datarow %}width="{{datarow.width}}" {% endif %}src="{{datarow.src}}">
 
     {%- elif datarow.type in ['var', 'const', 'calc'] %}
 
