--- a/templates/styles.html
+++ b/templates/styles.html
@@ -1,16 +1,16 @@
 ﻿    body {
-      font: {{data.font.normal_size}} sans-serif;
+      font: {{config.font.normal_size}} sans-serif;
       background-color: #f0f4f4;
       margin: 0;
-      min-width: {{data.width.min}};
+      min-width: {{config.width.min}};
     }
     /* Responsive design for Small screen */
-    @media screen and (max-width: {{data.width.max}}) {
-      body { min-width: {{data.width.min}} !important; }
+    @media screen and (max-width: {{config.width.max}}) {
+      body { min-width: {{config.width.min}} !important; }
     }
 
     .content {
-      max-width: {{data.width.max}};
+      max-width: {{config.width.max}};
       margin: 0 auto;
       padding: 16px 16px 32px 16px;
       background-color: #fff;
@@ -21,11 +21,11 @@
     }
 
     .footer {
-      max-width: {{data.width.max}};
+      max-width: {{config.width.max}};
       margin: 0 auto;
       text-align: center;
       padding: 20px 16px 60px 16px;
-      font-size: {{data.font.license_size}};
+      font-size: {{config.font.license_size}};
       font-weight: bold;
       background-color: #ddd;
     }
@@ -59,7 +59,7 @@
     /* Column 1: Variable name */
     .sname {
       display: inline-block;
-      min-width: {{data.width.name}};
+      min-width: {{config.width.name}};
     }
 
     /* Column 2: Variable Value (input form) */
@@ -74,7 +74,7 @@
     }
     .sval {
       display: inline-block;
-      width: {{data.width.value}};
+      width: {{config.width.value}};
     }
     .sval input[type=text] {
       background-color: #FFFFC0;
@@ -82,7 +82,7 @@
 
     .sconst {
       display: inline-block;
-      width: {{data.width.value}};
+      width: {{config.width.value}};
     }
     .sconst input[type=text] {
       background-color: #FFFFFF;
@@ -90,7 +90,7 @@
 
     .scalc  {
       display: inline-block;
-      width: {{data.width.value}};
+      width: {{config.width.value}};
     }
     .scalc input[type=text] {
       background-color: #C0FFFF;
@@ -99,7 +99,7 @@
     /* Column 3: Variable Units */
     .sunit {
       display: inline-block;
-      min-width: {{data.width.units}};
+      min-width: {{config.width.units}};
       text-align: center;
       border: 1px solid #888;
       border-radius: 4px;
@@ -108,5 +108,5 @@
     /* Column 4: Variable comment */
     .scoment {
       display: inline-block;
-      min-width: {{data.width.comment}};
+      min-width: {{config.width.comment}};
     }
