--- a/templates/content.html
+++ b/templates/content.html
@@ -1,4 +1,5 @@
-﻿<div class="content">
+﻿
+<div class="content">
 
   <h1>{{config.title}}</h1>
 
@@ -17,7 +18,7 @@
     {%- elif datarow.type == 'image' %}
 
     <!--  Image: {{datarow.name}} -->
-    <img alt="{{datarow.comment}}" {% if 'width' in datarow %}width="{{datarow.width}}" {% endif %}src="{{datarow.src}}">
+    <img alt="{{datarow.comment}}" {% if 'width' in datarow %}width="{{datarow.width}}" {% endif %}src="{{datarow.code}}">
 
     {%- elif datarow.type in ['var', 'const', 'calc'] %}
 
