Form[text]:  disabled with same color

--- a/templates/styles.html
+++ b/templates/styles.html
@@ -72,6 +72,12 @@
       border: 1px solid #888;
       border-radius: 4px;
     }
+    input[type=text]:disabled {
+       color: inherit;
+    }
+    
+    
+    
     .sval {
       display: inline-block;
       width: {{config.width.value}};
