Several renames and clean

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,12 +14,12 @@
 
   <!-- Styles -->
   <style>
-  {% include "styles.html"  %}
+{% include "styles.css"  %}
   </style>
 
   <!-- Script -->
   <script>
-  {% include "script.html"  %}
+{% include "scripts.js"  %}
   </script>
 
 </head>
@@ -28,10 +28,10 @@
 <body onload="init()">
 
   <!-- Content -->
-  {% include "content.html"  %}
+{% include "content.html"  %}
 
   <!-- Footer -->
-  {% include "footer.html"  %}
+{% include "footer.html"  %}
 
 </body>
 
