--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,6 +4,6 @@
     This work by <a href="https://github.com/picuino/picalc">Picuino</a>
     is licensed under a
     <a rel="GPL License" 
-       href="http://www.gnu.org/licenses/gpl-3.0.txt">
+       href="http://www.gnu.org/licenses/gpl-3.0.html">
        GPL version 3 license</a>.
   </div>
