--- a/templates/styles.css
+++ b/templates/styles.css
@@ -72,7 +72,12 @@
     input[type=text]:disabled {
       color: inherit;
    }
-
+   
+   .ssel {
+      display: inline-block;
+      width: {{config.width.value[:-2]|float + config.width.units[:-2]|float}}{{config.width.units[-2:]}};
+   }
+   
    .sval {
       display: inline-block;
       width: {{config.width.value}};
