Improved number representation

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
    {% if config.keywords %}<meta name="keywords" content="{{config.keywords}}">{% endif %}
    {% if config.author %}<meta name="author" content="{{config.author}}">{% endif %}
    {% if config.description %}<meta name="description" content="{{config.description}}">{% endif %}
-   <meta name="generator" content="Picalc generator powered by Python and Jinja2"
+   <meta name="generator" content="Picalc generator powered by Python and Jinja2">
    <meta name="version" content="{{version}}">
 
 
