--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,10 @@
 
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0">
-   {% if config.keywords %}<meta name="keywords" content="{{config.keywords}}">{% endif %}
-   {% if config.author %}<meta name="author" content="{{config.author}}">{% endif %}
-   {% if config.description %}<meta name="description" content="{{config.description}}">{% endif %}
+   {% if config.keywords %}<meta name="keywords" content="{{config.keywords}}">
+   {% endif %}{% if config.author %}<meta name="author" content="{{config.author}}">
+   {% endif %}{% if config.description %}<meta name="description" content="{{config.description}}">
+   {% endif -%}
    <meta name="generator" content="Picalc generator powered by Python and Jinja2">
    <meta name="version" content="{{version}}">
 
